// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base Button applies a :hover(background-color) via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #696969;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  bgHoverColor="#696969"
  label="hello"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies a background color via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #696969;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  bgColor="#696969"
  label="hello"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies a classname via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  className="aclass"
  label="hello"
>
  <button
    className="c0 aclass"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies a label color via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #696969;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #696969;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  labelColor="#696969"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies a label hover color via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #696969;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #696969;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  labelHoverColor="#696969"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies a media query via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

@media (max-width:768px) {
  .c0 {
    width: 30px;
  }
}

<button__StyledBtn
  label="hello"
  mediaQuery="@media(max-width:768px){width:30px}"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies a style object via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  style={
    Object {
      "width": "30px",
    }
  }
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    style={
      Object {
        "width": "30px",
      }
    }
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an html id via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  id="anid"
  label="hello"
>
  <button
    className="c0"
    disabled={false}
    id="anid"
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onBlur function via props and triggers that function on blur 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onBlur={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onBlur={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onClick function via props and triggers that function on click 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onClick={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onClick={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onFocus function via props and triggers that function on focus 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onFocus={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onFocus={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onMouseDown function via props and triggers that function on MouseDown 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onMouseDown={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onMouseDown={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onMouseEnter function via props and triggers that function on MouseEnter 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onMouseEnter={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onMouseEnter={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onMouseLeave function via props and triggers that function on MouseLeave 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onMouseLeave={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onMouseLeave={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onMouseUp function via props and triggers that function on MouseUp 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onMouseUp={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onMouseUp={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onTouchEnd function via props and triggers that function on TouchEnd 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onBlur={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onBlur={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies an onTouchStart function via props and triggers that function on TouchStart 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  onTouchStart={[Function]}
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    onTouchStart={[Function]}
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies the correct styles when \`dense\` is set to true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  line-height: 2.5em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  dense={true}
  label="hello"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies the html name attribute via props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  name="testName"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
    name="testName"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button applies the labelColor as the fill color to an svg passed via the label prop 1`] = `
.c1 {
  fill: #fff;
  vertical-align: top;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label={
    <IconMenu
      color="#fff"
      size={24}
    />
  }
>
  <button
    className="c0"
    disabled={false}
    label={
      <IconMenu
        color="#fff"
        size={24}
      />
    }
  >
    <icon_wrapper__Icon
      aria-label="open customize and profile menu"
      color="#fff"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
    >
      <svg
        aria-label="open customize and profile menu"
        className="c1"
        color="#fff"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <title>
          menu icon
        </title>
        <desc>
          hamburger menu icon
        </desc>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </icon_wrapper__Icon>
  </button>
</button__StyledBtn>
`;

exports[`base Button applies the labelHoverColor as the fill color to an svg passed via the label prop 1`] = `
.c1 {
  fill: #fff;
  vertical-align: top;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label={
    <IconMenu
      color="#fff"
      size={24}
    />
  }
>
  <button
    className="c0"
    disabled={false}
    label={
      <IconMenu
        color="#fff"
        size={24}
      />
    }
  >
    <icon_wrapper__Icon
      aria-label="open customize and profile menu"
      color="#fff"
      height={24}
      role="img"
      viewBox="0 0 24 24"
      width={24}
    >
      <svg
        aria-label="open customize and profile menu"
        className="c1"
        color="#fff"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
      >
        <title>
          menu icon
        </title>
        <desc>
          hamburger menu icon
        </desc>
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </icon_wrapper__Icon>
  </button>
</button__StyledBtn>
`;

exports[`base Button button type matches snapshot when button type = \`disabled\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: not-allowed;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #696969;
  opacity: .7;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #696969;
}

.c0:hover,
.c0:focus {
  color: #696969;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #696969;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  styleType="disabled"
>
  <button
    className="c0"
    disabled={true}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button button type matches snapshot when button type = \`disabledFilled\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: not-allowed;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  opacity: .7;
  background-color: #696969;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #fff;
}

.c0:hover,
.c0:focus {
  color: #fff;
  background-color: #696969;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  styleType="disabledFilled"
>
  <button
    className="c0"
    disabled={true}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button button type matches snapshot when button type = \`error\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #cc3300;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #cc3300;
}

.c0:hover,
.c0:focus {
  color: hsla(15,100%,40%,0.8);
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: hsla(15,100%,40%,0.8);
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  styleType="error"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button button type matches snapshot when button type = \`errorFilled\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #cc3300;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #fff;
}

.c0:hover,
.c0:focus {
  color: #fff;
  background-color: hsla(15,100%,40%,0.8);
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  styleType="errorFilled"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button button type matches snapshot when button type = \`filled\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #0680cd;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #fff;
}

.c0:hover,
.c0:focus {
  color: #fff;
  background-color: #53a4dc;
}

.c0:hover svg,
.c0:focus svg {
  fill: #fff;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  styleType="filled"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button button type matches snapshot when button type = \`flat\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  styleType="flat"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button button type matches snapshot when button type = \`inverted\` 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
  styleType="inverted"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;

exports[`base Button matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  line-height: 2.8em;
  white-space: nowrap;
  min-width: 64px;
  padding: 0 8px;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-letter-spacing: 0.075em;
  -moz-letter-spacing: 0.075em;
  -ms-letter-spacing: 0.075em;
  letter-spacing: 0.075em;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  cursor: pointer;
  border-radius: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #0680cd;
  background-color: #fff;
  -webkit-font-smoothing: inherit;
}

.c0 svg {
  fill: #0680cd;
}

.c0:hover,
.c0:focus {
  color: #53a4dc;
  background-color: #fff;
}

.c0:hover svg,
.c0:focus svg {
  fill: #53a4dc;
}

.c0:focus {
  outline-offset: 2px;
  outline: dotted 1px rgb(59,153,252);
}

<button__StyledBtn
  label="hello"
>
  <button
    className="c0"
    disabled={false}
    label="hello"
  >
    hello
  </button>
</button__StyledBtn>
`;
